docs(table): fix overflow issue on ie11 site (#6792)

--- a/src/material-examples/table-basic/table-basic-example.css
+++ b/src/material-examples/table-basic/table-basic-example.css
@@ -7,4 +7,5 @@
 
 .mat-table {
   overflow: auto;
+  max-height: 500px;
 }
